<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arducam_dual_camera</name>
  <version>1.0.0</version>
  <description>
    Hardware-accelerated dual-camera publisher for Arducam B0573 (GMSL2-to-CSI2).
    Captures a side-by-side frame from /dev/video0 via GStreamer + nvvidconv (Jetson VIC),
    splits it into left and right halves, and publishes both as sensor_msgs/Image.
  </description>
  <maintainer email="nipun.dhananjaya@gmail.com">WM Nipun Dhananjaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Isaac ROS NITROS: zero-copy NvBufSurface ↔ ROS image transport (Jetson / HAVE_NVBUF only) -->
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_nitros_image_type</depend>

  <!-- GStreamer / OpenCV are system deps found via pkg-config / cmake; no rosdep entry needed -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
